--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="appName">demo</string>
     
     <string name="find_more_hot_talk">更多热门话题</string>
+
+    <string name="find_un_follow">+ 关注</string>
 </resources>
