使用阿里直播播放器SDK中的代码测试直播,可以正常播放了

--- a/demo/src/main/res/values/strings.xml
+++ b/demo/src/main/res/values/strings.xml
@@ -4,4 +4,54 @@
     <string name="find_more_hot_talk">更多热门话题</string>
 
     <string name="find_un_follow">+ 关注</string>
+
+    <string name="start_button">Start</string>
+    <string name="stop_button">Stop</string>
+    <string name="pause_button">Pause</string>
+    <string name="resume_button">Resume</string>
+    <string name="replay_button">Replay</string>
+    <string name="mute_label">Mute:</string>
+    <string name="on_radiobutton">On</string>
+    <string name="off_radiobutton">Off</string>
+    <string name="volume_label">Volume</string>
+    <string name="brightness_label">Brightness</string>
+    <string name="scale_model">Scale model</string>
+    <string name="aspect_fit">Aspect fit</string>
+    <string name="aspect_fill">Aspect fill</string>
+    <string name="drop_buffer_duration">Drop buffer duration</string>
+    <string name="time_unit_label">ms</string>
+    <string name="goto_play">goto play</string>
+    <string name="input_url">input url here</string>
+    <string name="vod_basic_function">Vod basic function demo</string>
+    <string name="live_basic_function">Live basic function demo</string>
+    <string name="multiple_video_list_auto_play">Multiple video auto play demo</string>
+    <string name="debug_tools">Player debug tools demo</string>
+    <string name="url_is_empty">url is empty</string>
+    <string name="player_log">Player Logs：</string>
+    <string name="video_width">video width：</string>
+    <string name="video_height">video height：</string>
+    <string name="toast_prepare_success">Prepare success</string>
+    <string name="toast_fail_msg">Fail!! Reason:</string>
+    <string name="log_start_get_data">start get stream</string>
+    <string name="log_strart_play">start to play</string>
+    <string name="log_prepare_success"> prepare success</string>
+    <string name="log_player_create_success"> create player success</string>
+    <string name="log_open_url_success"> open url success</string>
+    <string name="log_request_stream_success"> get stream success</string>
+    <string name="log_start_open_stream"> start open stream</string>
+    <string name="log_first_frame_played"> first frame played</string>
+    <string name="log_seek_completed">seek completed</string>
+    <string name="log_play_stopped">play stopped</string>
+    <string name="log_seek_start">seek start</string>
+    <string name="net_change_to_4g">Net changes to 4G</string>
+    <string name="net_change_to_wifi">Net changes to WIFI</string>
+    <string name="net_disconnect">Net disconnected</string>
+    <string name="net_change_to_continue">Continue to play？</string>
+    <string name="copyright_title">Copyright Information</string>
+    <string name="copyright_ali">©2017 Copyright by Alibaba Cloud, Alibaba Group All rights reserved</string>
+    <string name="half_times">0.5X</string>
+    <string name="one_times">1.0X</string>
+    <string name="max_buffer_duration_nagtive">Drop buffer duration can not be a negative</string>
+    <string name="ok">OK</string>
+    <string name="no">No</string>
 </resources>
